chore: template storage docs
